--- a/propositional_classical.tex
+++ b/propositional_classical.tex
@@ -170,7 +170,7 @@ Given a formula $\alpha$, there exist derivations $\vlupsmash{\vlder{}{\{\acd,\m
 \end{lemma}
 
 \begin{proof}
-We show how to construct the first derivation, the second one can be done symmetrically. We argue by induction on the number of atom occurrences in $\alpha$. We have to consider the following base case and two inductive cases:
+We show how to construct the first derivation, the second one can be done symmetrically. We argue by induction on the number of atoms appearing in $\alpha$. We have to consider the following base case and two inductive cases:
 \[
 \vlinf{}{}{a}{\vls[a.a]}
 \qquad\hbox{,}\qquad
